feat(cart): add cart button component with JS handler and API integration
- Added `cart_button` inclusion tag with `cart_toggle_url` support
- Implemented `cart-button.js` for toggling cart state via API and BroadcastChannel
- Added icon switch (cart/check), count updates, and state sync across components
- Integrated `cart-button.js` into product list template

--- a/src/templates/pages/catalog/product/list.html
+++ b/src/templates/pages/catalog/product/list.html
@@ -26,6 +26,7 @@
   <script type="module" src="{% static 'js/components/likes-dislike.js' %}" defer></script>
   <script type="module" src="{% static 'js/components/rating-stars.js' %}" defer></script>
   <script type="module" src="{% static 'js/components/favorite-button.js' %}" defer></script>
+  <script type="module" src="{% static 'js/components/cart-button.js' %}" defer></script>
 {% endblock %}
 
 {% block content %}
