--- a/src/templates/components/header.html
+++ b/src/templates/components/header.html
@@ -38,7 +38,9 @@
                   <i class="fas fa-plus-circle me-2"></i>Add Product
                 </a>
               </li>
-              <li><hr class="dropdown-divider"></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
               <li>
                 <a class="dropdown-item" href="{% url 'catalog:category_create' 'master' %}">
                   <i class="fas fa-layer-group me-2"></i>Add Master Category
@@ -93,6 +95,25 @@
           </a>
         </div>
       {% endif %}
+
+      <!-- Cart icon  -->
+      <div class="me-3">
+        <a href="#"
+           class="text-decoration-none position-relative cart-icon-container"
+           data-tooltip="Cart
+            • Items: {{ cart_summary.items_count }}
+            • Qty: {{ cart_summary.total_quantity }}
+            • Total: {{ cart_summary.total_value }}">
+          {% if cart_summary.items_count > 0 %}
+            <i class="fas fa-shopping-cart cart-filled fs-4"></i>
+            <span class="cart-count-bubble" data-count="{{ cart_summary.items_count }}">
+        {{ cart_summary.items_count }}
+      </span>
+          {% else %}
+            <i class="fas fa-shopping-cart cart-empty fs-4"></i>
+          {% endif %}
+        </a>
+      </div>
 
       <!-- Auth controls -->
       <ul class="nav align-items-center">
