--- a/src/templates/layout/base.html
+++ b/src/templates/layout/base.html
@@ -38,6 +38,7 @@
   <script src="{% static 'js/components/messages.js' %}"></script>
   <script src="{% static 'js/components/category-menu.js' %}"></script>
   <script type="module" src="{% static 'js/layout/header-favorites.js' %}"></script>
+  <script type="module" src="{% static 'js/layout/header-cart.js' %}"></script>
 
   {% block extra_js %}{% endblock %}
 </body>
